--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -25,7 +25,7 @@
         .a {
             text-decoration: none;
             font-weight: bold;
-            font-family: 'Arvo', serif;
+            font-family: $terceraFont;
             color: $tercerColor;
             font-size: $textSm;
         }
