--- a/css/main.css
+++ b/css/main.css
@@ -1,59 +1,78 @@
 @import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Bebas+Neue&family=Bree+Serif&family=Stick+No+Bills:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Bebas+Neue&family=Bree+Serif&family=Stick+No+Bills:wght@400;500;700&display=swap");
-.container-fluid {
-  background-color: white; }
-  .container-fluid .logo {
-    width: 100px; }
-  .container-fluid .escudo:hover {
-    transform: scaleX(1.13);
-    transition: 1s; }
-  .container-fluid .btnHead {
-    background-color: red;
-    border-color: black; }
-  .container-fluid .tit {
-    color: red;
-    font-family: 'Stick No Bills', sans-serif;
-    font-size: 5rem; }
-  .container-fluid .link:hover {
-    transform: translateY(10px);
-    transition: transform 1s; }
-  .container-fluid .ul {
-    text-decoration: none; }
-    .container-fluid .ul .a {
-      text-decoration: none;
-      font-weight: bold;
-      font-family: 'Arvo', serif;
-      color: black;
-      font-size: 2rem; }
+p {
+  color: red;
+  font-size: 2rem;
+  font-family: "Bebas Neue", cursive;
+  background-color: white;
+}
+
+h2 {
+  background-color: red;
+  text-align: center;
+  font-size: 4rem;
+}
 
 h1 {
   color: red;
   font-family: "Stick No Bills", sans-serif;
   font-size: 5rem;
-  margin-left: 0; }
+  margin-left: 0;
+}
 
 h2,
 h3 {
   color: white;
   font-family: "Stick No Bills", sans-serif;
-  font-size: 3.5rem; }
+}
 
 h4 {
   color: red;
   font-family: "Bebas Neue", cursive;
   font-size: 1.5rem;
-  font-weight: bold; }
-
-p {
-  color: red;
-  font-size: 1.5rem;
-  font-family: "Bebas Neue", cursive; }
+  font-weight: bold;
+}
 
 .btnCard {
   font-family: "Bebas Neue", cursive;
   color: white;
   background-color: red;
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+}
+
+.container-fluid {
+  background-color: white;
+}
+.container-fluid .logo {
+  width: 100px;
+}
+.container-fluid .escudo:hover {
+  transform: scaleX(1.13);
+  transition: 1s;
+}
+.container-fluid .btnHead {
+  background-color: red;
+  border-color: black;
+}
+.container-fluid .tit {
+  color: red;
+  font-family: "Stick No Bills", sans-serif;
+  font-size: 5rem;
+}
+.container-fluid .link:hover {
+  transform: translateY(10px);
+  transition: transform 1s;
+}
+.container-fluid .ul {
+  text-decoration: none;
+}
+.container-fluid .ul .a {
+  text-decoration: none;
+  font-weight: bold;
+  font-family: "Arvo", serif;
+  color: black;
+  font-size: 2rem;
+}
 
 .row .h2 {
   margin-top: 50px;
@@ -61,49 +80,126 @@ p {
   font-size: 3.5rem;
   background-color: red;
   width: 90%;
-  text-align: center; }
-
-.row p {
-  font-family: 'Bebas Neue', cursive;
-  font-size: 2rem;
-  color: red; }
-
+  text-align: center;
+}
 .row .btnCard {
   background-color: red;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   color: white;
-  font-size: 2rem; }
+  font-size: 2rem;
+}
+
+main section div article a img {
+  width: 25vw;
+}
+
+.table {
+  background-color: white;
+  text-align: center;
+  margin: 20px 0;
+}
+.table th {
+  font-family: "Bebas Neue", cursive;
+  color: red;
+  font-size: 4rem;
+}
+.table td {
+  font-family: "Bebas Neue", cursive;
+  color: black;
+  font-size: 2.5rem;
+}
+
+.artNos {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5px;
+}
+.artNos .imgNos {
+  width: 80%;
+}
+.artNos .pNos {
+  width: 80%;
+}
+
+.form {
+  background-color: rgba(255, 255, 255, 0.2);
+  width: 50vw;
+  box-sizing: border-box;
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin-top: 10 px;
+  margin-bottom: 20px;
+}
+.form input {
+  font-family: "Bebas Neue", cursive;
+  color: black;
+  font-size: 2.5rem;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 7px;
+  margin-bottom: 5px;
+  border: none;
+}
+.form textarea {
+  min-height: 400%;
+  max-height: 400px;
+  border: none;
+  width: 100%;
+  padding: 7px;
+  margin-bottom: 5px;
+  font-family: "Bebas Neue", cursive;
+  font-size: 2rem;
+}
+.form .btnForm {
+  font-family: "Bebas Neue", cursive;
+  color: white;
+  font-size: 4rem;
+  background-color: red;
+  border: none;
+}
 
 .pie {
-  background-color: rgba(255, 255, 255, 0.795); }
-  .pie .titPie {
-    color: red;
-    font-weight: bold;
-    font-size: 2.5rem;
-    text-align: center; }
-  .pie .pieRrss {
-    list-style: none;
-    display: flex;
-    flex-wrap: nowrap;
-    align-content: stretch;
-    margin-bottom: 0;
-    justify-content: space-evenly; }
-    .pie .pieRrss .btnPie {
-      width: 50%; }
-    .pie .pieRrss .rrss:hover {
-      transform: translateY(-10px);
-      transition: transform 1s; }
+  background-color: rgba(255, 255, 255, 0.795);
+}
+.pie .titPie {
+  color: red;
+  font-weight: bold;
+  font-size: 2.5rem;
+  text-align: center;
+}
+.pie .pieRrss {
+  list-style: none;
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: stretch;
+  margin-bottom: 0;
+  justify-content: space-evenly;
+}
+.pie .pieRrss .btnPie {
+  width: 50%;
+}
+.pie .pieRrss .rrss:hover {
+  transform: translateY(-10px);
+  transition: transform 1s;
+}
 
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   background-image: url(../IMAGENES/estadiomonumental.webp);
   overflow-x: hidden;
-  background-size: cover; }
+  background-size: cover;
+}
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+}
+
+/*# sourceMappingURL=main.css.map */
