--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,24 +1,15 @@
 .container-fluid{
     background-color: $segundoColor;
     .logo { 
-        width: 100px;
-    }
-    .escudo:hover {
+        width: 100%;
+        &:hover {
         transform: scaleX(1.13);
         transition: 1s;
+        }
     }
     .btnHead {
         background-color: $mainColor;
         border-color: $tercerColor;
-    }
-    .tit {
-        color: $mainColor;
-        font-family: 'Stick No Bills', sans-serif;
-        font-size: $textXxxl;
-    }
-    .link:hover {
-        transform: translateY(10px);
-        transition: transform 1s;
     }
     .ul {
         text-decoration: none;
@@ -27,8 +18,11 @@
             font-weight: bold;
             font-family: $terceraFont;
             color: $tercerColor;
-            font-size: $textSm;
+            font-size: $textXs;
+            &:hover {
+                transform: translateY(10px);
+                transition: transform 1s;
+            }
         }
     }
-
 }
