--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -10,21 +10,26 @@
     box-sizing: border-box;
     border-radius: 10px;
     padding: 10px 20px;
-    margin-top: 10 px;
+    margin-top: 10px;
     margin-bottom: 20px;
-    input{
+    display: flex;
+    flex-direction: column;
+    .textForm{
         @include tabla ($segundaFont, $tercerColor, $textMd);
-        
+        box-sizing: border-box;
+        padding: 7px;
+        margin-bottom: 5px;
+        border: none;
+    }
+    .mailForm {
+        @include tabla ($segundaFont, $tercerColor, $textMd);
         box-sizing: border-box;
         padding: 7px;
         margin-bottom: 5px;
         border: none;
     }
     textarea{
-        min-height: 400%;
-        max-height: 400px;
         border: none;
-        
         padding: 7px;
         margin-bottom: 5px;
         font-family: $segundaFont;
@@ -34,5 +39,6 @@
         @include tabla ($segundaFont, $segundoColor, $textXxl);
         background-color: $mainColor;
         border: none;
+        width: 100%;
     }
 }
