--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,8 @@
 @import "_content";
 @import "_header";
 @import "_principal";
+@import "_media";
+@import "_iframe";
 @import "_fotospag";
 @import "_calendario";
 @import "_contacto";
@@ -15,7 +17,7 @@
     margin: 0;
     box-sizing: border-box;
   }
-  body{
+  .body{
     background-image: url(../IMAGENES/estadiomonumental.webp);
     overflow-x: hidden;
     background-size: cover;
